unpackaged/main/default/objects/InsurancePlansMaster__c/InsurancePlansMaster__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Insurance Plans Master</label>
</CustomObject>