unpackaged/main/default/objects/InsurancePlansMaster__c/fields/Emirates__c.field-meta.xml
<CustomField>
    <fullName>Emirates__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Emirates</label>
    <length>255</length>
    <type>Text</type>
</CustomField>