unpackaged/main/default/objects/InsurancePlansMaster__c/fields/Plans__c.field-meta.xml
<CustomField>
    <fullName>Plans__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Plans</label>
    <length>255</length>
    <type>Text</type>
</CustomField>